--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=https://freelance-marketplace-server-seven.vercel.app
-# VITE_API_BASE_URL=http://localhost:3000
+# VITE_API_BASE_URL=https://freelance-marketplace-server-seven.vercel.app
+VITE_API_BASE_URL=http://localhost:3000
